# Project-Suuupra

./: .env.example  .env.production  .gitattributes  .gitignore  10K-USER-EXTREME-LOAD-TEST-REPORT.md  1B-USER-BREAKING-POINT-ANALYSIS.md  1M-USER-ULTIMATE-LOAD-TEST-REPORT.md  @TodoGlobal.md  ACID-FIXES-SUMMARY.md  ACID-IMPLEMENTATION-SUMMARY.md  API-ENDPOINT-COVERAGE-ANALYSIS.md  API-TESTING-COMPLETE-REPORT.md  CLAUDE.md  COMPREHENSIVE-INDUSTRY-TESTING-REPORT.md  COMPREHENSIVE-STRESS-TEST-REPORT.md  DEPLOYMENT_IMPROVEMENTS_SUMMARY.md  DOCKER-COMPOSE-ALIGNMENT-COMPLETE.md  FINAL-API-TESTING-REPORT.md  FINAL-REPORT.md  FS.py  INFRASTRUCTURE_COMPLETION_REPORT.md  LICENSE  PHASE0-EXECUTION-COMPLETE.md  PHASE0-FOUNDATION-COMPLETE.md  PHASE1-SECURITY-COMPLETE.md  PHASE2-SERVICE-IMPLEMENTATION-COMPLETE.md  PHASE3-OBSERVABILITY-COMPLETE.md  PLATFORM-CLEANUP-COMPLETE.md  PROBLEMS-FIXED-SUMMARY.md  PRODUCTION-STATUS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README-Implementation.md  README-TESTING.md  README.md  SERVICE-DOCKER-COMPOSE-REFINEMENT-COMPLETE.md  SUUUPRA-FRONTEND-ARCHITECTURE.md  TODO_UPDATE_SUMMARY.md  TodoGlobal.md  UPI_ECOSYSTEM_SIMULATION.md  WINDOWS_SETUP.md  (+66 more)
ai/: milvus.yaml
docs/: README.md  (+1 more)
services/commerce/: .env  .env.example  ADVANCED_FEATURES_SUMMARY.md  DEVELOPMENT_SUMMARY.md  Dockerfile  Dockerfile.simple  Makefile  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run_local.py  simple_server.py  test_advanced_features.py  test_basic.py
services/commerce/.github/workflows/: ci-cd.yml
services/commerce/database/: indexes.sql
services/commerce/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  rbac.yaml  secrets.yaml  service.yaml
services/commerce/monitoring/: prometheus.yml
services/commerce/monitoring/grafana/dashboards/: commerce-service-dashboard.json
services/commerce/monitoring/prometheus/: alerts.yml
services/commerce/scripts/: init-db.sql  init-inventory-db.sql
services/commerce/src/: .coverage  __init__.py  main.py  server.ts
services/commerce/src/commerce/: __init__.py
services/commerce/src/commerce/api/: __init__.py
services/commerce/src/commerce/api/v1/: __init__.py  router.py
services/commerce/src/commerce/application/: __init__.py  inventory_service.py  order_service.py  saga_orchestrator.py
services/commerce/src/commerce/config/: __init__.py  settings.py
services/commerce/src/commerce/domain/: __init__.py
services/commerce/src/commerce/infrastructure/: __init__.py  database.py  redis.py
services/commerce/src/commerce/utils/: __init__.py  dependencies.py  logging.py  metrics.py  tracing.py
services/commerce/src/tests/e2e/: test_inventory_e2e.py
services/commerce/src/tests/security/: test_security_headers.py
services/commerce/tests/e2e/: test_advanced_features_e2e.py
services/commerce/tests/load/: locustfile.py
services/live-tracking/: Cargo.toml  Dockerfile  Dockerfile.simple  TODO.md  docker-compose.yml  go_simple.mod  main.rs  package-lock.json  package.json  simple_server.go
services/live-tracking/config/: config.yaml
services/live-tracking/src/: config.rs  database.rs  handlers.rs  middleware.rs  models.rs  server.ts  services.rs  utils.rs
(+1188 files in other folders)
